--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:id="@+id/activity_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
@@ -14,179 +13,194 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
 
-
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/img00"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/zero" />
-
-            <LinearLayout
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="#ffffff" />
-
-            <ImageView
-                android:id="@+id/img01"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/cross" />
-
-            <LinearLayout
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="#ffffff" />
-
-            <ImageView
-                android:id="@+id/img02"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/zero" />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="310dp"
-            android:layout_height="1dp"
-            android:background="#ffffff" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/img10"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/cross" />
-
-            <LinearLayout
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="#ffffff" />
-
-            <ImageView
-                android:id="@+id/img11"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/zero" />
-
-            <LinearLayout
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="#ffffff" />
-
-            <ImageView
-                android:id="@+id/img12"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/cross" />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="310dp"
-            android:layout_height="1dp"
-            android:background="#ffffff" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/img20"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/cross" />
-
-            <LinearLayout
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="#ffffff" />
-
-            <ImageView
-                android:id="@+id/img21"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/cross" />
-
-            <LinearLayout
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="#ffffff" />
-
-            <ImageView
-                android:id="@+id/img22"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/zero" />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="5dp"
-            android:background="#ffffff" />
-
-
-        <LinearLayout
+            android:id="@+id/activity_main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:orientation="horizontal"
-            android:weightSum="40">
-
-            <TextView
-                android:id="@+id/txt_player_1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="20"
-                android:gravity="center"
-                android:text="Player 1"
-                android:textColor="@color/green"
-                android:textSize="20sp"
-                android:textStyle="italic|normal"
-                android:typeface="serif" />
-
+            android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="1dp"
-                android:layout_height="30sp"
-                android:layout_marginBottom="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/img00"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/zero" />
+
+                <LinearLayout
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="#ffffff" />
+
+                <ImageView
+                    android:id="@+id/img01"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/cross" />
+
+                <LinearLayout
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="#ffffff" />
+
+                <ImageView
+                    android:id="@+id/img02"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/zero" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="310dp"
+                android:layout_height="1dp"
+                android:background="#ffffff" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/img10"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/cross" />
+
+                <LinearLayout
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="#ffffff" />
+
+                <ImageView
+                    android:id="@+id/img11"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/zero" />
+
+                <LinearLayout
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="#ffffff" />
+
+                <ImageView
+                    android:id="@+id/img12"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/cross" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="310dp"
+                android:layout_height="1dp"
+                android:background="#ffffff" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/img20"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/cross" />
+
+                <LinearLayout
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="#ffffff" />
+
+                <ImageView
+                    android:id="@+id/img21"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/cross" />
+
+                <LinearLayout
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="#ffffff" />
+
+                <ImageView
+                    android:id="@+id/img22"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/zero" />
+
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/activity_main1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
                 android:layout_marginTop="5dp"
                 android:background="#ffffff" />
 
 
-            <TextView
-                android:id="@+id/txt_player_2"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="20"
                 android:gravity="center"
-                android:text="Player 2"
-                android:textColor="@color/red"
-                android:textSize="20sp"
-                android:textStyle="italic|normal"
-                android:typeface="serif" />
+                android:orientation="horizontal"
+                android:weightSum="40">
 
+                <TextView
+                    android:id="@+id/txt_player_1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="20"
+                    android:gravity="center"
+                    android:text="Player 1"
+                    android:textColor="@color/green"
+                    android:textSize="20sp"
+                    android:textStyle="italic|normal"
+                    android:typeface="serif" />
+
+
+                <LinearLayout
+                    android:layout_width="1dp"
+                    android:layout_height="30sp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp"
+                    android:background="#ffffff" />
+
+
+                <TextView
+                    android:id="@+id/txt_player_2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="20"
+                    android:gravity="center"
+                    android:text="Player 2"
+                    android:textColor="@color/red"
+                    android:textSize="20sp"
+                    android:textStyle="italic|normal"
+                    android:typeface="serif" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#ffffff" />
 
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#ffffff" />
-
     </LinearLayout>
 </ScrollView>
