--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,14 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_action_scan"
+        android:icon="@drawable/qrscan"
         android:orderInCategory="100"
-        android:title="Scan"
-        android:icon="@android:drawable/ic_menu_camera"
+        android:title="Accept Invite"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menu_action_gen"
-        android:icon="@android:drawable/ic_dialog_dialer"
+        android:icon="@drawable/qr"
         android:orderInCategory="100"
-        android:title="Gen"
+        android:title="Invite Player"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menu_action_dial"
+        android:icon="@android:drawable/ic_menu_add"
+        android:orderInCategory="100"
+        android:title="Connect to"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menu_action_verify"
+        android:icon="@android:drawable/ic_menu_info_details"
+        android:orderInCategory="100"
+        android:title="Verify Number"
         app:showAsAction="ifRoom" />
 </menu>
