--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -18,11 +18,11 @@
         android:icon="@android:drawable/ic_menu_add"
         android:orderInCategory="100"
         android:title="Connect to"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
     <item
         android:id="@+id/menu_action_verify"
         android:icon="@android:drawable/ic_menu_info_details"
         android:orderInCategory="100"
         android:title="Verify Number"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
 </menu>
