--- a/app/src/main/res/drawable/pattern_win.xml
+++ b/app/src/main/res/drawable/pattern_win.xml
@@ -2,14 +2,14 @@
     android:shape="rectangle">
     <gradient
         android:angle="90"
-        android:centerColor="#ff3f3f"
-        android:endColor="#ffadad"
-        android:startColor="#ffadad"
+        android:centerColor="#009e8a"
+        android:endColor="#3cecd8"
+        android:startColor="#3cecd8"
         android:type="sweep" />
 
     <stroke
-        android:width="0dp"
-        android:color="#f4b2b1" >
+        android:width="1dp"
+        android:color="#00796B" >
     </stroke>
 
     <padding
@@ -20,6 +20,7 @@
     </padding>
 
     <corners
-        android:radius="600dp"   >
+        android:radius="
+        00dp"   >
     </corners>
 </shape>
