--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#dfdfdf</color>
+    <color name="colorPrimary">#00897B</color>
+    <color name="colorPrimaryDark">#00796B</color>
+    <color name="colorAccent">#B2DFDB</color>
 
-    <color name="green">#1c8e00</color>
-    <color name="red">#d10300</color>
+    <color name="green">#28c701</color>
+    <color name="red">#f24744</color>
 </resources>
