--- a/app/src/main/res/drawable/pattern_win.xml
+++ b/app/src/main/res/drawable/pattern_win.xml
@@ -20,7 +20,6 @@
     </padding>
 
     <corners
-        android:radius="
-        00dp"   >
+        android:radius="00dp"   >
     </corners>
 </shape>
