--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -218,5 +218,13 @@
                 android:background="#ffffff" />
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/score"
+            android:text=""
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="left" />
+
     </LinearLayout>
 </ScrollView>
